--- a/src/Components/Services/Services.css
+++ b/src/Components/Services/Services.css
@@ -126,6 +126,7 @@ body {
 	font-size: 20px;
 	line-height: 24.6px;
 	font-weight: 300;
+	color: rgba(16, 16, 16, 1);
 }
 
 /* case submission start */
